<resources>
    <string name="app_name">Jaldi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_incorrect_password">The email or password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_connection">Connection problem occurred</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Strings related to works -->
    <string name="work_type_cleaner">Home Cleaning</string>
    <string name="work_type_carpenter">Carpenter</string>
    <string name="work_type_electrician">Electrician</string>
    <string name="work_type_mason">Mason</string>
    <string name="work_type_painter">Painter</string>
    <string name="work_type_plumber">Plumber</string>
    <string name="work_type_ac_technical">AC Technical</string>

    <string name="work_details_separator">\u0020|\u0020</string>
    <string name="work_workers_left">%1$d of %2$d positions left</string>
    <string name="work_duration">%1$d hr</string>
    <string name="work_distance">%1$d km</string>
    <string name="work_address">Address</string>
    <string name="not_available">N/A</string>
    <string name="work_cost_title">Cost:\u0020</string>
    <string name="work_cost_metric">QAR</string>
    <string name="work_distance_title">Distance:\u0020</string>
    <string name="work_details_title">Details</string>
    <string name="work_duration_title">Duration:\u0020</string>
    <string name="work_take_button">TAKE</string>
    <string name="work_taken_button">TAKEN</string>

    <string name="status_created">Created</string>
    <string name="status_assigned">Assigned</string>
    <string name="status_en_route">En Route</string>
    <string name="status_working">Working</string>
    <string name="status_tidying_up">Tidying Up</string>
    <string name="status_finish">Finish</string>
    <string name="status_finished">Finished</string>
    <string name="status_canceled">Canceled</string>

    <string name="status_update_invalid">Invalid status.</string>

    <string name="take_work_confirmation_title">Please Confirm.</string>
    <string name="take_work_confirmation_message">Do you really want to take this order?</string>
    <string name="cancel_work_confirmation_title">Please Confirm.</string>
    <string name="cancel_work_confirmation_message">Do you really want cancel this order?</string>
    <string name="alert_yes_button">Yes</string>
    <string name="alert_no_button">No</string>

    <string name="details_call_button">Call</string>
    <string name="details_message_button">Message</string>
    <string name="details_cancel_button">Cancel</string>
    <string name="toast_details_no_phone_error">No phone number specified</string>
    <string name="toast_details_error_on_cancel">Server connection error</string>
    <string name="toast_details_cancel_successful">Order has been canceled successfully</string>

    <string name="action_bar_title_find_work">Find Work</string>
    <string name="nav_drawer_sign_out">Sign Out</string>
    <string name="nav_drawer_contact_operator">Contact Operator</string>
    <string name="action_bar_title_my_works">My Works</string>

    <string name="test">fvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfhfvfvfvdfvdfkvfdhjkvhsdfjkvdshgfjkdshfsdkfdksjfdhsvjkfvbfdkjvdfh</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
