<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/orders"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/action_bar_title_find_work" />
        <item
            android:id="@+id/myOrders"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/action_bar_title_my_works" />
        <item
            android:id="@+id/contactOperator"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/nav_drawer_contact_operator" />
        <item
        android:id="@+id/signOut"
        android:icon="@drawable/ic_menu_gallery"
        android:title="@string/nav_drawer_sign_out" />
    </group>

</menu>
