<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <LinearLayout
        android:layout_width="@dimen/cell_left_part_width"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/cell_top_margin"
        android:layout_marginStart="@dimen/cell_start_margin"
        android:layout_marginEnd="@dimen/work_left_part_end_margin"
        android:id="@+id/controlContainer"
        android:layout_alignParentStart="true"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/work_status_height"
            android:id="@+id/workStatus"
            android:paddingEnd="@dimen/work_status_end_padding"
            android:textSize="@dimen/work_content_text_size"
            android:gravity="center_vertical|end"
            android:textColor="@color/colorWhite"
            android:background="@android:color/holo_orange_light"/>
        <ImageView
            android:id="@+id/workIcon"
            android:layout_width="@dimen/work_icon_size"
            android:layout_height="@dimen/work_icon_size"
            android:layout_marginBottom="@dimen/work_icon_bottom_margin"
            android:layout_marginTop="@dimen/work_icon_top_margin"
            android:layout_gravity="center_horizontal"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAlignment="center"
            android:layout_marginTop="@dimen/workers_top_margin"
            android:layout_gravity="center_horizontal"
            android:textSize="@dimen/work_content_text_size"
            android:textColor="@android:color/black"
            android:id="@+id/workPositionLeft"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/take_work_button_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/take_work_button_top_margin"
            android:id="@+id/takeWorkButton"
            android:background="@drawable/take_work_button_background"
            android:text="@string/work_take_button"
            android:textSize="@dimen/work_content_text_size"
            android:textAllCaps="false"/>
    </LinearLayout>


    <RelativeLayout
        android:id="@+id/detailsContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/cell_end_margin"
        android:layout_marginStart="@dimen/cell_end_margin"
        android:layout_marginTop="@dimen/cell_top_margin"
        android:layout_toEndOf="@+id/controlContainer"
        android:textAppearance="?attr/textAppearanceListItem" >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/workType"
            android:textStyle="bold"
            android:includeFontPadding="false"
            android:lineSpacingExtra="0dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/work_title_text_size"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/workDate"
            android:layout_below="@+id/workType"
            android:layout_marginTop="@dimen/work_date_top_margin"
            android:layout_alignParentStart="true"
            android:textColor="@android:color/black"
            android:textSize="@dimen/work_content_text_size"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/workTime"
            android:layout_marginTop="@dimen/work_date_top_margin"
            android:layout_marginStart="@dimen/work_time_margin"
            android:layout_below="@+id/workType"
            android:layout_toEndOf="@id/workDate"
            android:textColor="@android:color/black"
            android:textSize="@dimen/work_content_text_size"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/workDetails"
            android:layout_below="@+id/workDate"
            android:layout_marginTop="@dimen/work_details_top_margin"
            android:layout_alignParentStart="true"
            android:text="@string/work_details_title"
            android:textSize="@dimen/work_content_text_size"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/workDetails"
            android:layout_marginTop="@dimen/work_date_top_margin"
            android:orientation="horizontal"
            android:id="@+id/workDetailsContainer"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:id="@+id/workDistanceTilte"
                android:text="@string/work_distance_title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/work_content_text_size"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:id="@+id/workDistanceValue"
                android:textColor="@android:color/black"
                android:textSize="@dimen/work_content_text_size"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/work_details_separator"
                android:textColor="@android:color/black"
                android:textSize="@dimen/work_content_text_size"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:id="@+id/workDurationTitle"
                android:text="@string/work_duration_title"
                android:textSize="@dimen/work_content_text_size"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:id="@+id/workDurationValue"
                android:textSize="@dimen/work_content_text_size"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/work_details_separator"
                android:textColor="@android:color/black"
                android:textSize="@dimen/work_content_text_size"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:text="@string/work_cost_title"
                android:textColor="@android:color/black"
                android:textSize="@dimen/work_content_text_size"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:id="@+id/workCostValue"
                android:textColor="@android:color/black"
                android:textSize="@dimen/work_content_text_size"
                />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/work_address"
            android:layout_marginTop="@dimen/work_details_top_margin"
            android:id="@+id/workAddressTitle"
            android:layout_below="@+id/workDetailsContainer"
            android:textSize="@dimen/work_content_text_size"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:id="@+id/workAddressValue"
            android:layout_marginTop="@dimen/work_date_top_margin"
            android:layout_below="@+id/workAddressTitle"
            android:textSize="@dimen/work_content_text_size"
            android:textColor="@android:color/black"
            />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="@dimen/cell_bottom_margin"
        android:layout_below="@+id/detailsContent"/>
</RelativeLayout>
