<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pro.jaldi.WorkDetailFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:background="@color/contact_buttons_color"
        android:id="@+id/workDetailsStatusContainer">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:textAllCaps="false"
            android:id="@+id/detailsNextStatusButton"
            android:text="@string/status_en_route"/>

    </RelativeLayout>

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/map"
        tools:context=".MapsActivity"
        android:layout_below="@+id/workDetailsStatusContainer"
        android:layout_above="@+id/workDetailsInfoContainer"
        android:name="com.google.android.gms.maps.SupportMapFragment" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorWhite"
        android:layout_above="@+id/detailsAddressSeparator"
        android:id="@+id/workDetailsInfoContainer"
        >
        <ImageView
            android:layout_width="@dimen/details_work_icon_size"
            android:layout_height="@dimen/details_work_icon_size"
            android:id="@+id/detailsWorkIcon"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/details_work_icon_start_margin"
            android:layout_marginEnd="@dimen/details_work_icon_end_margin"
            android:src="@drawable/work_type_carpenter"
            android:layout_alignParentStart="true"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            android:id="@+id/detailsContactInfoContainer"
            android:layout_toEndOf="@+id/detailsWorkIcon"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="textStart"
                android:id="@+id/detailsWorksUserName"
                android:maxLines="1"
                android:textSize="@dimen/work_title_text_size"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:textAlignment="textStart"
                android:layout_marginTop="@dimen/details_work_phone_top_margin"
                android:textSize="@dimen/work_content_text_size"
                android:textColor="@color/colorBlack"
                android:id="@+id/detailsWorkUserPhone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingTop="@dimen/details_contact_vertical_padding"
            android:paddingBottom="@dimen/details_contact_vertical_padding"
            android:orientation="horizontal">

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/contact_buttons_color"
                android:layout_marginEnd="@dimen/details_contact_separator_margin"
                android:layout_marginStart="@dimen/details_contact_separator_margin"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/detailsCall"
                android:layout_width="@dimen/details_contact_button_size"
                android:layout_height="wrap_content"
                android:text="@string/details_call_button"
                android:drawableTop="@drawable/call_icon"
                android:drawableTint="@color/contact_buttons_color"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                android:textSize="@dimen/work_content_text_size"
                android:textColor="@color/contact_buttons_color"/>

            <View
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:background="@color/contact_buttons_color"
                android:layout_marginEnd="@dimen/details_contact_separator_margin"
                android:layout_marginStart="@dimen/details_contact_separator_margin"/>

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/detailsMessage"
                android:layout_width="@dimen/details_contact_button_size"
                android:layout_height="wrap_content"
                android:text="@string/details_message_button"
                android:drawableTop="@drawable/message_icon"
                android:drawableTint="@color/contact_buttons_color"
                android:background="@android:color/transparent"
                android:textAllCaps="false"
                android:textSize="@dimen/work_content_text_size"
                android:textColor="@color/contact_buttons_color"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/cancelBtnContainer">
                <View
                    android:layout_width="1dp"
                    android:layout_height="match_parent"
                    android:background="@color/contact_buttons_color"
                    android:layout_marginEnd="@dimen/details_contact_separator_margin"
                    android:layout_marginStart="@dimen/details_contact_separator_margin"/>

                <android.support.v7.widget.AppCompatButton
                    android:id="@+id/detailsCancel"
                    android:layout_width="@dimen/details_contact_button_size"
                    android:layout_height="wrap_content"
                    android:text="@string/details_cancel_button"
                    android:drawableTop="@drawable/cancel_icon"
                    android:drawableTint="@color/contact_buttons_color"
                    android:textAllCaps="false"
                    android:background="@android:color/transparent"
                    android:textSize="@dimen/work_content_text_size"
                    android:textColor="@color/contact_buttons_color"/>
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/detailsAddressSeparator"
        android:layout_above="@+id/detailsAddressContainer"
        android:background="@color/contact_buttons_color"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/details_address_container_height"
        android:id="@+id/detailsAddressContainer"
        android:paddingEnd="@dimen/details_address_container_padding_end"
        android:paddingStart="@dimen/details_address_container_padding_start"
        android:layout_above="@+id/detailsCommentSeparator">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/detailsDistanceIcon"
            android:ellipsize="end"
            android:id="@+id/detailsAddressValue"
            android:maxLines="1"
            android:textSize="@dimen/details_address_text_size"
            android:layout_alignParentStart="true"/>

        <ImageView
            android:layout_width="@dimen/details_address_icon_size"
            android:layout_height="@dimen/details_address_icon_size"
            android:src="@drawable/location_icon"
            android:id="@+id/detailsDistanceIcon"
            android:tint="@color/contact_buttons_color"
            android:padding="@dimen/details_address_icon_padding"
            android:layout_marginStart="@dimen/details_address_icon_margin"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@+id/detailsDistanceValue"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/details_address_text_size"
            android:layout_marginEnd="@dimen/details_address_icon_margin"
            android:id="@+id/detailsDistanceValue"
            android:layout_toStartOf="@+id/detailsDurationIcon"/>


        <ImageView
            android:layout_width="@dimen/details_address_icon_size"
            android:layout_height="@dimen/details_address_icon_size"
            android:src="@drawable/duration_icon"
            android:id="@+id/detailsDurationIcon"
            android:tint="@color/contact_buttons_color"
            android:padding="@dimen/details_address_icon_padding"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/details_address_icon_margin"
            android:layout_toStartOf="@+id/detailsDurationValue"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/details_address_text_size"
            android:layout_marginEnd="@dimen/details_address_icon_margin"
            android:id="@+id/detailsDurationValue"
            android:layout_toStartOf="@+id/detailsCostIcon"/>

        <ImageView
            android:layout_width="@dimen/details_address_icon_size"
            android:layout_height="@dimen/details_address_icon_size"
            android:src="@drawable/cost_icon"
            android:id="@+id/detailsCostIcon"
            android:padding="@dimen/details_address_icon_padding"
            android:layout_centerVertical="true"
            android:tint="@color/contact_buttons_color"
            android:layout_marginStart="@dimen/details_address_icon_margin"
            android:layout_toStartOf="@+id/detailsCostValue"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:textSize="@dimen/details_address_text_size"
            android:layout_marginEnd="@dimen/details_address_icon_margin"
            android:id="@+id/detailsCostValue"
            android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:id="@+id/detailsCommentSeparator"
        android:layout_above="@+id/detailsComment"
        android:background="@color/contact_buttons_color"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/detailsComment"
        android:maxLines="1"
        android:text="@string/test"
        android:textSize="@dimen/details_address_text_size"
        android:paddingStart="@dimen/details_address_container_padding_start"
        android:paddingEnd="@dimen/details_address_container_padding_end"
        android:ellipsize="end"
        android:scrollbars="vertical"
        android:layout_marginBottom="@dimen/details_comment_vertical_margin"
        android:layout_marginTop="@dimen/details_comment_vertical_margin"
        android:textColor="@color/colorBlack"
        android:maxHeight="@dimen/activity_vertical_margin"
        android:layout_alignParentBottom="true"/>


</RelativeLayout>
